# GraphicsTest

./: build.gradle.kts  settings.gradle.kts
.fleet/: receipt.json
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/: RustView.android.kt
composeApp/src/androidMain/kotlin/me/paxbun/graphicstest/: MainActivity.kt  NativeViewActivity.kt
composeApp/src/androidMain/res/layout/: activity_native_view.xml
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/: App.kt  RustView.kt
composeApp/src/iosMain/kotlin/: RustView.ios.kt
composeApp/src/nativeInterop/cinterop/: graphicsTest.def
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
rust/: Cargo.toml  out.json
rust/src/: lib.rs  shader.wgsl
rust/src/native/: android.rs  ios.rs
